--- a/inline.css
+++ b/inline.css
@@ -9,6 +9,21 @@ div{
 }
 
 div{
+    position: relative;
+    width: 100px;
+}
+div{
     display: flex;
     height: 100vh;
+}
+
+div{
+    float: left;
+    height: 50%;
+
+}
+
+div{
+    position: absolute;
+    top: 50%;
 }
